Groups feed modifications (also updates native profile feed):  - simplified style by inheriting from plugin and removing theme specific activity files  - separated css into its own files (timeline/timeline.scss)  - Fixed reply and edit functionality  - styled consistent with nhs colour palette  - Comment, reply and edit form tidied significantly  - Activity buttons simplified and left aligned (reply / edit / delete / like)  - Fixed issue where replies and new comments didnt show or trigger reload  - Fixed image display issues on feed and new comments  - corrected group avatar and personal avatars on replies.
Groups generic (all group pages)  fixes:
 - added group description display to all group pages
 - added member count and moderator / owner display

--- a/assets/scss/buddy-forms.scss
+++ b/assets/scss/buddy-forms.scss
@@ -47,15 +47,6 @@ input[type="textarea"] {
   border: 1px solid $color_nhsuk_black !important; // added important tag to avoid 28 different specific rules
 }
 
-#bp-nouveau-activity-form {
-  @extend .nhsuk-form-group;
-  border : none;
-
-  #whats-new-textarea {
-	@extend .nhsuk-textarea;
-	background : $color_nhsuk-white;
-  }
-}
 .messages-wrapper {
   .bp-messages-nav-panel {
 	.bp-messages-threads-list {
